# cookiecutter-lib

./: .gitignore  README.rst  cookiecutter.json  setup.cfg  setup.py  tags
.github/workflows/: python.yml
tests/: test_cookiecutter_project.py
{{cookiecutter.directory_name}}/: .gitignore  Makefile  README.rst  setup.cfg  setup.py  setup.sh  tox.ini
{{cookiecutter.directory_name}}/.github/workflows/: python.yml
{{cookiecutter.directory_name}}/docs/: conf.py  index.rst  make.bat
{{cookiecutter.directory_name}}/docs/source/: index.rst
{{cookiecutter.directory_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.directory_name}}/{{cookiecutter.project_slug}}/: core.py
