[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
extend_ignore =
        # Pep8 specifies you SHOULD leave space around operators
        E251
        # whitespace between var and brackets ) } and ]
        E202
        # comments error. way too subjective.
        E265
        # too many leading #'s in a comment
        E266
        # Guido doesn't even do this.
        E302
        # module level import not at top of file
        E402,

        # Goes off when setting up user namespace
        F401

        RST303
        # Unrecognized directive which is like always
        RST304
        RST305

        # public module
        D100
        D101
        D102
        # public function
	D103
        # public package
        D104
        D105
        D107

exclude =
        build
        dist
        docs
        node_modules
        .tox

[metadata]
license_file = LICENSE
platform=any
