[metadata]
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: Android
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX:: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

long_description = file: README.rst, LICENSE
long_description_content_type=text/reStructuredtext
license_file = LICENSE
platforms=any
test_suite = test

[options]
include_package_data = True

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
extend_ignore =
        # Pep8 specifies you SHOULD leave space around operators
        E251
        # whitespace between var and brackets ) } and ]
        E202
        # comments error. way too subjective.
        E265
        # too many leading #'s in a comment
        E266
        # Guido doesn't even do this.
        E302
        # module level import not at top of file
        E402,

        # Goes off when setting up user namespace
        F401

        RST303
        # Unrecognized directive which is like always
        RST304
        RST305

        # public module
        D100
        D101
        D102
        # public function
	D103
        # public package
        D104
        D105
        D107

exclude =
        build
        dist
        docs
        node_modules
        .tox

[pydocstyle]
convention = numpy
add-ignore = D101, D102, D105, D107, D203

[pylint]
max-line-length = 120
ignore = C0103
exclude =
    build
    dist
    docs/build
    .tox
    .pytest*
    tools


[tool:pytest]
testpaths = tests/
# addopts =-s --doctest-modules --doctest-glob="*.rst" --doctest-continue-on-failure --doctest-report udiff --continue-on-collection-errors --durations=10
# doctest_optionflags= NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL